feat: return not found when can't get a post
